fix: E2E test fixes and backend bug fixes (186→197 passed)
Backend fixes:
- DatabaseQueryService: fix Object[] to String[] cast in listConstraints()
- DatabaseQueryController/QueryHistoryController: add @Transactional to DELETE endpoints
- DiffService: use cloud_admin internal credentials instead of stale user password, add JDBC retry
- BranchService: cold-start parent branch compute before CHECKPOINT for WAL flush
- BackupService: add CHECKPOINT before backup to capture latest WAL
- ComputeLifecycleService: verify pod liveness in hot path, increase wake timeout to 300s
- ComputePodManager: update ConfigMap password on syncPassword to survive pod restarts
- DatasetService: re-read entity after wakeCompute for fresh compute host/port
- PythonJobRunner: use /bin/sh -c wrapper for entrypoint to handle quotes
- JobPodManager: use createOrReplace instead of serverSideApply for ConfigMap
- export_parquet.py: add ATTACH retry logic for compute pod startup delay

Test fixes:
- Fix password lost after poll_until in dataset/backup fixtures
- Fix response format assertions (paginated dict vs list, field names)
- Fix schema diff API parameter names (source_type/source_id)
- Add poll_until after compute_size change before reset_password test
- Enable datalake job completion tests (VK/CCI infra available)
- Fix TenantResponse field assertions (name == username)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>